WS_INTEGRATION/DX Sandbox/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Abandon_Date__c</fullName>
        <label>Abandon Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Account type</description>
        <formula>TEXT(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type_Workaround__c</fullName>
        <description>Workaround to show activity type on custom report
https://help.salesforce.com/apex/HTViewSolution?id=000004232&amp;language=en_US</description>
        <inlineHelpText>Workaround to show activity type on custom report</inlineHelpText>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <description>Pulled directly from Wellspring</description>
        <label>Agreement Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approximate_Amount__c</fullName>
        <label>Approximate Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Insensitive_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Case Insensitive ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Filing__c</fullName>
        <label>Country of Filing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Count__c</fullName>
        <description>Total number of gifts this account has given. Filled in by the monthly integration</description>
        <inlineHelpText>Total number of gifts this account has given.</inlineHelpText>
        <label>Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invention_Create_Date__c</fullName>
        <description>Date related invention was created, according to Wellspring</description>
        <inlineHelpText>Date related invention was created, according to Wellspring</inlineHelpText>
        <label>Invention Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invention__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invention</label>
        <referenceTo>OLDInvention__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBIR_STTR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Small Business Innovation Research/Small Business Tech Transfer</description>
        <inlineHelpText>Small Business Innovation Research/Small Business Tech Transfer</inlineHelpText>
        <label>SBIR/STTR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_System_Created_Date__c</fullName>
        <label>Source System Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_System_Last_Modified_Date__c</fullName>
        <label>Source System Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Used on tasks</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Code__c</fullName>
        <description>Track code used to track a specific agreement within Wellspring</description>
        <inlineHelpText>Track code used to track a specific agreement within Wellspring</inlineHelpText>
        <label>Track Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID field</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID field</inlineHelpText>
        <label>XID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>yoxel__Conversation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related email conversation logged by Yoxel Sync.</description>
        <inlineHelpText>Related email conversation</inlineHelpText>
        <label>Conversation</label>
        <referenceTo>yoxel__Conversation__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>